@@ -53,15 +53,15 @@ if test x@TARGET_APPLE_LINKER@ != x1; then
     fi
     rm -f $t1 $t2
 
-	if ! test -z "${TARGET_OBJ2ELF}"; then
-	    "${TARGET_OBJ2ELF}" $tmpfile || exit 1
-	fi
 	if test x@platform@ != xemu; then
 	    @TARGET_STRIP@ --strip-unneeded \
 		-K grub_mod_init -K grub_mod_fini \
 		-K _grub_mod_init -K _grub_mod_fini \
 		-R .note.gnu.gold-version -R .note.GNU-stack \
 		-R .note -R .comment $tmpfile || exit 1
+	fi
+	if ! test -z "${TARGET_OBJ2ELF}"; then
+	    "${TARGET_OBJ2ELF}" $tmpfile || exit 1
 	fi
 else
     tmpfile2=${outfile}.tmp2
